Update program (and 8x8 result)