@@ -1,5 +1,8 @@
 package avantgard;
 
+import java.io.BufferedWriter;
+import java.io.FileWriter;
+import java.io.IOException;
 import java.util.List;
 import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.concurrent.ExecutorService;
@@ -8,10 +11,10 @@ import java.util.concurrent.atomic.AtomicInteger;
 
 
 public class Avantgard {
-    public ExecutorService executor = Executors.newFixedThreadPool(50);
+    public ExecutorService executor = Executors.newVirtualThreadPerTaskExecutor();
     public final int n = 8;
-    public List<Color[][]> gridList = new CopyOnWriteArrayList<>();
     public AtomicInteger taskCounter = new AtomicInteger(0);
+    private final Object lock = new Object();
 
     public Avantgard() {}
 
@@ -24,14 +27,26 @@ public class Avantgard {
             }
         }
 
-        // Submit the initial task
+        clearFile();
+
         taskCounter.incrementAndGet();
-        executor.submit(new PaintTask(grid, 0, 0, this));
+        executor.submit(new PaintTask(grid, 0, 0, 0, this));
+
+        // All possible starting points
+        for (int i = 0; i < n; i++) {
+            for (int j = 0; j < n; j++) {
+                taskCounter.incrementAndGet();
+                executor.submit(new PaintTask(grid, i, j, 0, this));
+
+                while (taskCounter.get() > 0) {
+                    System.out.println("Task Counter: " + taskCounter.get());
+                }
+            }
+        }
 
         // Wait for all tasks to finish
         while (taskCounter.get() > 0) {
-            //System.out.println("Task Counter: " + taskCounter.get());
-            //System.out.println("Grid List Size: " + gridList.size());
+            System.out.println("Task Counter: " + taskCounter.get());
         }
         
         try {
@@ -44,14 +59,8 @@ public class Avantgard {
         //printAllGrids();
     }
 
-    private void printAllGrids() {
-        System.out.println("--------------------");
-        for (Color[][] g : gridList) {
-            printGrid(g);
-        }
-    }
-
     public void printGrid(Color[][] grid) {
+        System.out.println("--------------------");
         System.out.println("  0 1 2 3 4 5 6 7");
         for (int i = 0; i < n; i++) {
             System.out.print(i + " ");
@@ -60,7 +69,37 @@ public class Avantgard {
             }
             System.out.println();
         }
-        System.out.println("--------------------");
+    }
+
+    private void clearFile() {
+        String filePath = "output.txt";
+        synchronized (lock) {
+            try (BufferedWriter writer = new BufferedWriter(new FileWriter(filePath))) {
+                writer.write("");
+            } catch (IOException e) {
+                e.printStackTrace();
+            }
+        }
+    }
+
+    public void writeGridToFile(Color[][] grid, int countColored) {
+        String filePath = "output.txt";
+        synchronized (lock) {
+            try (BufferedWriter writer = new BufferedWriter(new FileWriter(filePath, true))) {
+                writer.write("--------------------\n");
+                writer.write("  0 1 2 3 4 5 6 7\n");
+                for (int i = 0; i < grid.length; i++) {
+                    writer.write(i + " ");
+                    for (int j = 0; j < grid[i].length; j++) {
+                        writer.write((grid[i][j] == Color.COLORED ? "C" : " ") + " ");
+                    }
+                    writer.write("\n");
+                }
+                writer.write("Count Colored: " + countColored + "\n");
+            } catch (IOException e) {
+                e.printStackTrace();
+            }
+        }
     }
 
 }
